# ants

./: CMakeLists.txt  README.md  ants.atta
.github/workflows/: web-publisher.yml
src/: ant.cpp  ant.h  antComponent.cpp  antComponent.h  antScript.cpp  antScript.h  projectScript.cpp  projectScript.h  system.cpp  system.h  world.cpp  world.h  worldComponent.cpp  worldComponent.h
